# serve-llm

./: .gitignore  LICENSE  README.md
.github/: dependabot.yml
.github/workflows/: ci.yaml
k8s/: ray-service.yaml
serve/: Dockerfile  Makefile  deployment.yaml  pyproject.toml  requirements.txt
serve/src/: main.py
